  * debian/local/apport-collect: Ignore ValueErrors from
    add_package_info(), which happens if the bug has a source package
    task which does not have an identically named binary package name.
    Slightly ugly, but it's nontrivial to do that in a sensible
    manner; let's just fix the crash for now, since the focus of this
    tool is to collect information from hooks. (LP: #334823)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 26 Feb 2009 12:23:51 +0100

apport (0.138) jaunty; urgency=low

  * apport/crashdb_impl/launchpad.py: Consider an useful stack trace
    sufficient for automatically removing the core dump, it doesn't
    need to be perfect. This is in accordance with not setting the
    apport-failed-retrace tag for useful, but non-perfect retraces any
    more.
  * apport/hookutils.py, backends/packaging_rpm.py: Convert usage of
    md5 module (which is deprecated in 2.6) to hashlib.
  * Replace all instances of using an exception's .message attribute
    with str(exception), since message is deprecated in Python 2.6.
  * apport/hookutils.py: Add attach_printing(). Thanks to Brian Murray
    for the initial patch! (LP: #333582)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 24 Feb 2009 22:24:31 +0100

apport (0.137) jaunty; urgency=low

  * Set python-version to all, include symlinks in the package.

 -- Matthias Klose <doko@ubuntu.com>  Tue, 24 Feb 2009 21:22:36 +0100

apport (0.136) jaunty; urgency=low

  [ Andy Whitcroft ]
  * bin/apportcheckresume: remove originator in suspend/hibernate/resume
    reporting.  This was intended for debugging only and is now redundant.
  * bin/apportcheckresume, apport/report.py: when collecting resume failures
    in very early boot hal may not be running and we thus unable to obtain
    the machine type information.  Move title generation to the reporting
    engine.

  [ Martin Pitt ]
  * debian/local/apport-collect: Add user environment information, too
    (LANG, PATH, SHELL). (LP: #332578)
